--- a/source/main/templates/login.html
+++ b/source/main/templates/login.html
@@ -11,8 +11,8 @@
     <main class="box">
         <div class="login-case">
             <form action="" method="POST">{% csrf_token %}
-                <div class="f-name-block">
-                    <input type="text" placeholder="First name" name="f-name" id="f-name" class="input">
+                <div class="u-name-block">
+                    <input type="text" placeholder="Username" name="u-name" id="u-name" class="input">
                 </div>
                 <div class="e-mail-block">
                     <input type="text" placeholder="E-Mail" name="e-mail" id="e-mail" class="input">
