--- a/source/main/templates/navbar.html
+++ b/source/main/templates/navbar.html
@@ -41,6 +41,6 @@
         <li class="nav-links"><a href="{% url 'main:index'%}" class="navs">Home</a></li>
         <li class="nav-links"><a href="{% url 'main:sign-up' %}" class="navs">Sign Up</a></li>
         <li class="nav-links"><a href="{% url 'main:login' %}" class="navs">Login</a></li>
-        <li class="nav-links"><a href="" class="navs">Support</a></li>
+        <li class="nav-links"><a href="{% url 'support:main' %}" class="navs">Support</a></li>
     </ul>
 </nav>
