--- a/source/main/static/CSS/base.css
+++ b/source/main/static/CSS/base.css
@@ -2,4 +2,8 @@
 * {
     font-family: 'Noto Sans JP', sans-serif;
     margin:0;
+    scroll-behavior: smooth;
+}
+html {
+    scroll-behavior: smooth;
 }
